--- a/couphone/app/src/main/res/layout/activity_login.xml
+++ b/couphone/app/src/main/res/layout/activity_login.xml
@@ -12,21 +12,19 @@
 
     <ImageView
         android:id="@+id/main_logo_iv"
-
         android:layout_width="178dp"
         android:layout_height="178dp"
         android:src="@drawable/main_logo"
-        app:layout_constraintBottom_toTopOf="@id/couphone_logo_tv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="130dp"/>
 
-    <ImageView
+    <TextView
         android:id="@+id/couphone_logo_iv"
         android:layout_width="244dp"
         android:layout_height="55dp"
-        android:src="@drawable/couphone_logo"
+        android:text="couphone"
         app:layout_constraintTop_toBottomOf="@id/main_logo_iv"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +41,7 @@
         android:padding="16dp"
         android:hint="휴대폰 번호"
         android:fontFamily="@font/line_seed_sans_bold"
-        app:layout_constraintTop_toBottomOf="@id/couphone_logo_tv"
+        app:layout_constraintTop_toBottomOf="@id/couphone_logo_iv"
         app:layout_constraintBottom_toTopOf="@id/password_et"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
