--- a/couphone/app/src/main/res/layout/fragment_settings.xml
+++ b/couphone/app/src/main/res/layout/fragment_settings.xml
@@ -18,7 +18,7 @@
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:background="@color/white"
-            android:src="@drawable/left_arrow"
+            android:src="@drawable/left_arrow_double"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
