--- a/couphone/app/src/main/res/values/colors.xml
+++ b/couphone/app/src/main/res/values/colors.xml
@@ -13,4 +13,7 @@
     <color name="background">#F9F1EC</color>
     <color name="textgray">#686868</color>
     <color name="maincolor">#FFEECD</color>
+    <color name="select">#000000</color>
+    <color name="unselect">#DDDDDD</color>
+    <color name="filter_text">#0000DD</color>
 </resources>
