--- a/couphone/app/src/main/res/layout/fragment_my_coupon.xml
+++ b/couphone/app/src/main/res/layout/fragment_my_coupon.xml
@@ -10,7 +10,7 @@
         android:layout_height="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
-        android:src="@drawable/previous_arrow"
+        android:src="@drawable/left_arrow_double"
         android:background="@color/white"
         android:adjustViewBounds="true"
         android:scaleType="centerInside"
