--- a/couphone/app/src/main/res/layout/fragment_search.xml
+++ b/couphone/app/src/main/res/layout/fragment_search.xml
@@ -19,28 +19,33 @@
         android:background="@drawable/search_tab_green"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        android:imeOptions="actionDone"
+        android:inputType="text"/>
 
-    <!--<android.widget.Button
+  <ImageButton
+        android:id="@+id/submit_btn"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_marginTop="15dp"
-        android:layout_marginLeft="5dp"
-        android:background="@drawable/group1735"
-        app:layout_constraintStart_toEndOf="@id/search"
-        app:layout_constraintTop_toTopOf="@id/search"/>-->
+        android:layout_marginEnd="10dp"
+        android:background="@drawable/search_arrow"
+        app:layout_constraintEnd_toEndOf="@id/searchBar"
+        app:layout_constraintTop_toTopOf="@id/searchBar"/>
 
-
+    <View
+        app:layout_constraintTop_toTopOf="@id/recyclerView_list"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/black"/>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:layout_marginHorizontal="30dp"
         app:layout_constraintTop_toBottomOf="@+id/searchBar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:paddingLeft="20dp"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
