로그인화면,바텀로고,홈화면카테고리로고수정,최근검색어창삭제

--- a/couphone/app/src/main/res/layout/activity_splash.xml
+++ b/couphone/app/src/main/res/layout/activity_splash.xml
@@ -32,7 +32,7 @@
         android:id="@+id/detail_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="지류쿠폰과 핸드폰의 만남"
+        android:text="쿠폰을 폰 안에"
         android:fontFamily="@font/tway_fly"
         android:textColor="@color/white"
         android:textSize="13sp"
