--- a/couphone/app/src/main/res/layout/activity_register.xml
+++ b/couphone/app/src/main/res/layout/activity_register.xml
@@ -100,7 +100,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/register_button"
+        android:id="@+id/verify_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
@@ -133,7 +133,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"
+        android:layout_marginEnd="140dp"
         app:layout_constraintTop_toBottomOf="@id/verification_code_label"
         app:hintEnabled="false">
 
@@ -148,12 +148,26 @@
             android:hint="인증번호를 입력하세요"/>
 
     </com.google.android.material.textfield.TextInputLayout>
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/verify_code_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/verification_button_green"
+        android:backgroundTint="@null"
+        android:fontFamily="@font/line_seed_sans_bold"
+        android:text="인증번호 확인"
+        android:textColor="@color/white"
+        android:textSize="10.5sp"
+        app:layout_constraintStart_toEndOf="@id/phonenumber_layout"
+        app:layout_constraintTop_toBottomOf="@id/verification_code_label" />
 
     <TextView
         android:id="@+id/change_password_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="비밀번호 입력"
+        android:text="간편 비밀번호 설정"
         android:textColor="@color/black"
         android:textSize="12sp"
         android:fontFamily="@font/line_seed_sans_bold"
@@ -190,7 +204,7 @@
         android:id="@+id/password_check_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="비밀번호 재확인"
+        android:text="간편 비밀번호 재확인"
         android:textColor="@color/black"
         android:textSize="12sp"
         android:fontFamily="@font/line_seed_sans_bold"
@@ -224,7 +238,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/register_reset_button"
+        android:id="@+id/register_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
